--- a/new_interface_qt/design.ui
+++ b/new_interface_qt/design.ui
@@ -30,57 +30,51 @@
      <attribute name="title">
       <string>Process</string>
      </attribute>
-     <widget class="QSlider" name="slider_confidence">
+     <widget class="QWidget" name="verticalLayoutWidget">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>20</y>
-        <width>600</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="btn_drop_file">
-      <property name="geometry">
-       <rect>
-        <x>100</x>
+        <x>160</x>
         <y>70</y>
-        <width>600</width>
-        <height>181</height>
+        <width>441</width>
+        <height>391</height>
        </rect>
       </property>
-      <property name="text">
-       <string>Перетащиет файл сюда или Нажмите, чтобы загрузить</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="btn_submit">
-      <property name="geometry">
-       <rect>
-        <x>100</x>
-        <y>260</y>
-        <width>600</width>
-        <height>40</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Обработать</string>
-      </property>
-     </widget>
-     <widget class="QProgressBar" name="progressBar">
-      <property name="geometry">
-       <rect>
-        <x>100</x>
-        <y>330</y>
-        <width>631</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="value">
-       <number>0</number>
-      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <property name="spacing">
+        <number>20</number>
+       </property>
+       <property name="sizeConstraint">
+        <enum>QLayout::SetDefaultConstraint</enum>
+       </property>
+       <item>
+        <widget class="QSlider" name="slider_confidence">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btn_drop_file">
+         <property name="text">
+          <string>Перетащиет файл сюда или Нажмите, чтобы загрузить</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btn_submit">
+         <property name="text">
+          <string>Обработать</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QProgressBar" name="progressBar">
+         <property name="value">
+          <number>0</number>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_annot">
